# fractal-drive

./: CMakeLists.txt  README.md  settings.cap
Dependencies/glad/include/glad/: glad.h
Dependencies/glad/src/: glad.c
Source/: main.cpp
